--- a/index.html
+++ b/index.html
@@ -15,25 +15,28 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png"/>
 		<link rel="manifest" href="site.webmanifest"/>
 		<link rel="preload" as="style" href="css/style.css?=newVers_0001" onload="this.rel='stylesheet'"/>
-		<link rel="preload" as="style" href="css/font-awesome.min.css" onload="this.rel='stylesheet'"/>
-		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/fontawesome-webfont.woff2?v=4.7.0"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
+		<link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css?=newVers_0001"/>
+		<script>
+			// Hides fallback nav so that it only appears if Javascript disabled
+			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#nav1 li button#fallback-button{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
+		</script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
 	</head>
 
-	<!-- The HTML code in this file has been adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/) and per the guidelines there is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. -->
+	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
 		<div class="text-container">
 
 			<!-- nav1 adapted from https://webaim.org/techniques/skipnav/ -->
-			<nav id="skiptocontent" nav="nav0">
+			<nav id="nav0">
 				<a href="#main" tabindex="0">skip to main content</a>
 			</nav>
 
@@ -41,7 +44,7 @@
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span><i class="fa fa-home"></i></span> <span id="home">Home</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span id="home">Home</span></a></li>
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span id="zoomcasts">Zoomcasts</span></a></li>
 
@@ -53,14 +56,14 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span id="about">About</span></a></li>
 
-					<li role="none"><button style="cursor:pointer" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0"><i class="fa fa-bars"></i></button></li>
+					<li role="none"><button style="cursor:pointer" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button><button style="cursor:pointer" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="site_sections.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
 			</nav>
 
 			<nav id="nav2">
 				<div id="overlay-menu">
 						<ul>
-							<li role="none"><button class="close" style="cursor:pointer" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0" id="first-overlay">&#215;</button></li>
+							<li role="none"><button class="close" style="cursor:pointer" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0" id="overlay-first">&#215;</button></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span><i class="fa fa-home"></i> Home</span></a></li>
 
@@ -72,18 +75,10 @@
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><span>FAQ</span></a></li>
 
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html" id="last-overlay"><span>About</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html" id="overlay-last"><span>About</span></a></li>
 						</ul>
 				</div>
 			</nav>
-
-			<!-- <nav class="overlay" id="nav3">
-				<ul role="menubar" aria-label="Close button">
-					<li role="none"><a class="close" aria-label="Close site sections" aria-pressed="false" onclick="closeNav()" title="Close" href="javascript:void(0)">&#215;</a></li>
-				</ul>
-				<section class="overlay-content" role="menu">
-				</section>
-			</nav> -->
 
 			<header id="header">
 				<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
@@ -310,7 +305,7 @@
 
 				<hr class="section-divider"/>  -->
 				
-				<section aria-labelledby="syllabi" id="call">
+				<section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
 						<img loading="lazy" src="images/uvc_0006-deriv-1640px.jpg" srcset="images/uvc_0006-deriv-1640px.jpg 1640w, images/uvc_0006-deriv-1244px.jpg 1244w, images/uvc_0006-deriv-864px.jpg 864w, images/uvc_0006-deriv-622px.jpg 622w, images/uvc_0006-deriv-592px.jpg 592w, images/uvc_0006-deriv-432px.jpg 432w, images/uvc_0006-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous, “Dance Blanket with Diving Whale and Raven Motifs” (Wool and bark, Northwest Coast of Alaska, United States, c.1880-c.1900 1880), 1961.568., Art Institute of Chicago, Chicago, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/).">
 						<div class="image-caption">
@@ -322,7 +317,7 @@
 						</div>
 					</div>
 
-					<h2 id="syllabi">Call for Syllabi (CFS)</h2>
+					<h2 id="call-for-syllabi">Call for Syllabi (CFS)</h2>
 					<p class="center small"><strong>Deadline:</strong> Accepted on a rolling basis</p>
 					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds and 2) introduce less-studied, global, Victorian-era writers, artists and communities into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
@@ -372,8 +367,9 @@
 
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
+		
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
 			// Removes service worker
@@ -386,6 +382,7 @@
 			}
 		</script>
 		<script>
+			// Add border to sticky nav after scroll down
 			$(window).scroll(function () {
 					var $heightScrolled = $(window).scrollTop();
 					var $defaultHeight = 400;
@@ -461,7 +458,7 @@
 			// Adapted from https://www.taraprasad.com/trap-focus-inside-an-element/
 			// Also see https://hiddedevries.nl/en/blog/2017-01-29-using-javascript-to-trap-focus-in-an-element
 			jQuery(document).ready(function () {
-				jQuery('#last-overlay')
+				jQuery('#overlay-last')
 						.on('keydown', function (e) {
 								var isTabPressed = (e.key === 'Tab' || e.keyCode === KEYCODE_TAB);
 								if (!isTabPressed) {
@@ -470,17 +467,17 @@
 								if (e.shiftKey) {
 										return
 								} else {
-										jQuery('#first-overlay').focus();
+										jQuery('#overlay-first').focus();
 										e.preventDefault()
 								}
 						});
-				jQuery('#first-overlay').on('keydown', function (e) {
+				jQuery('#overlay-first').on('keydown', function (e) {
 						var isTabPressed = (e.key === 'Tab' || e.keyCode === KEYCODE_TAB);
 						if (!isTabPressed) {
 								return
 						}
 						if (e.shiftKey) {
-								jQuery('#last-overlay').focus();
+								jQuery('#overlay-last').focus();
 								e.preventDefault()
 						} else {
 								return
@@ -489,37 +486,35 @@
 			});
 		</script>
 		<script>
-// Adapted from https://stackoverflow.com/a/21718316
-// Highlights users current section in navigation
-
-checkUrl();
-			
-function checkUrl () {
-	if(location.pathname == "/" && 
-		location.hash.length <= 1 && 
-		location.search.length <= 1) {
-			document.getElementById("home").setAttribute("class","current");
-	}
-	if (window.location.href.indexOf("index") > -1) {	
-			document.getElementById("home").setAttribute("class","current");
-	};
-	if (window.location.href.indexOf("zoomcasts") > -1) {	
-			document.getElementById("zoomcasts").setAttribute("class","current");
-	};
-	if (window.location.href.indexOf("lesson_plans") > -1) {	
-			document.getElementById("lesson_plans").setAttribute("class","current");
-	};
-	if (window.location.href.indexOf("syllabi") > -1) {	
-			document.getElementById("syllabi").setAttribute("class","current");
-	};
-	if (window.location.href.indexOf("faq") > -1) {	
-			document.getElementById("faq").setAttribute("class","current");
-	};
-	if (window.location.href.indexOf("about") > -1) {	
-			document.getElementById("about").setAttribute("class","current");
-	};
-};	
-
+			// Highlights users current section in navigation
+			// Adapted from https://stackoverflow.com/a/21718316
+			checkUrl();
+						
+			function checkUrl () {
+				if(location.pathname == "/" && 
+					location.hash.length <= 1 && 
+					location.search.length <= 1) {
+						document.getElementById("home").setAttribute("class","current");
+				}
+				if (window.location.href.indexOf("index") > -1) {	
+						document.getElementById("home").setAttribute("class","current");
+				};
+				if (window.location.href.indexOf("zoomcasts") > -1) {	
+						document.getElementById("zoomcasts").setAttribute("class","current");
+				};
+				if (window.location.href.indexOf("lesson_plans") > -1) {	
+						document.getElementById("lesson_plans").setAttribute("class","current");
+				};
+				if (window.location.href.indexOf("syllabi") > -1) {	
+						document.getElementById("syllabi").setAttribute("class","current");
+				};
+				if (window.location.href.indexOf("faq") > -1) {	
+						document.getElementById("faq").setAttribute("class","current");
+				};
+				if (window.location.href.indexOf("about") > -1) {	
+						document.getElementById("about").setAttribute("class","current");
+				};
+			};
 		</script>
 		<script src="scripts/carousel.js"></script>
 		<script src="scripts/carouselItem.js"></script>
