--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span id="about">About</span></a></li>
 
-					<li role="none"><button style="cursor:pointer" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button><button style="cursor:pointer" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="site_sections.html"><i class="fa fa-bars"></i></a></button></li>
+					<li role="none"><button style="cursor:pointer" title="Menu" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button><button style="cursor:pointer" title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="site_sections.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
 			</nav>
 
 			<nav id="nav2">
 				<div id="overlay-menu">
 						<ul>
-							<li role="none"><button class="close" style="cursor:pointer" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0" id="overlay-first">&#215;</button></li>
+							<li role="none"><button class="close" style="cursor:pointer" title="Close" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0"><i class="fa fa-times"></i></button></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span><i class="fa fa-home"></i> Home</span></a></li>
 
