--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<nav id="nav2">
 				<div id="overlay-menu">
 						<ul>
-							<li role="none"><button class="close" style="cursor:pointer" title="Close" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0"><i class="fa fa-times"></i></button></li>
+							<li role="none"><button class="close" style="cursor:pointer" title="Close" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0" id="overlay-first"><i class="fa fa-times"></i></button></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span><i class="fa fa-home"></i> Home</span></a></li>
 
