remove obsolete sections

--- a/index.html
+++ b/index.html
@@ -218,21 +218,7 @@
 						</div>
 					</div>
 				</section>
-				<!-- <div class="col-sm-1"></div> -->
-				<!-- <h1 class="header-title">Undisciplining the Victorian Classroom</h1> -->
 			</header>
-
-			<!-- <nav class="main-menu" aria-labelledby="site-sections">
-				<ol id="site-sections">
-					<li><a href="#organizers">Organizers</a></li>
-					<li><a href="#mission">Mission</a></li>
-					<li><a href="#call">Call for Syllabi</a></li>
-					<li><a href="#image-details">Image Details</a></li>
-					<li><a href="#site-code">Site Code</a></li>
-				</ol>
-			</nav>
-			
-			<hr class="section-divider"/> -->
 
 			<main id="main">
 				<section class="organizers" aria-labelledby="organizers">
@@ -254,58 +240,16 @@
 					<p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need.  Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 				</section>
 				
-				<!-- <hr class="section-divider"/> -->
-
-				<!-- <section aria-labelledby="coming-soon" id="upcoming">
-					<div class="image-wrapper">
-						<img class="image-border" loading="lazy" src="img/uvc_0005-deriv-1640px.jpg" srcset="img/uvc_0005-deriv-1640px.jpg 1640w, img/uvc_0005-deriv-1244px.jpg 1244w, img/uvc_0005-deriv-864px.jpg 864w, img/uvc_0005-deriv-622px.jpg 622w, img/uvc_0005-deriv-592px.jpg 592w, img/uvc_0005-deriv-432px.jpg 432w, img/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
-						<div class="image-caption">
-							<h3>
-								<a href="#gee">
-									William Gee, “Carving Scene,” c.1905
-								</a>
-							</h3>
-						</div>
+				<!-- <div class="image-wrapper">
+					<img class="image-border" loading="lazy" src="img/uvc_0005-deriv-1640px.jpg" srcset="img/uvc_0005-deriv-1640px.jpg 1640w, img/uvc_0005-deriv-1244px.jpg 1244w, img/uvc_0005-deriv-864px.jpg 864w, img/uvc_0005-deriv-622px.jpg 622w, img/uvc_0005-deriv-592px.jpg 592w, img/uvc_0005-deriv-432px.jpg 432w, img/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 622px, (min-width: 780px) calc(90vw - 71px), (min-width: 340px) 94.29vw, calc(100vw - 32px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<div class="image-caption">
+						<h3>
+							<a href="#gee">
+								William Gee, “Carving Scene,” c.1905
+							</a>
+						</h3>
 					</div>
-
-					<h2 id="coming-soon">Coming Soon (circa March 2021)</h2>
-
-					<p>Carefully-curated teaching materials that center voices from writers and other creators of color as well as the work of teacher-scholars doing antiracist work in their classrooms. These materials will include:</p>
-
-					<ul>
-						<li><span>Suggested primary resources and study materials</span>
-							<ul>
-								<li>For teaching Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em> in a variety of thematic and historical contexts, including pathways focused on: 
-									<ol>
-										<li>Decentering Britishness;</li>
-										<li>Decolonizing (Health)Care;</li>
-										<li>Gender, Race, Nation;</li>
-										<li>Recentering Nursing in Wartime.</li>
-									</ol>
-								</li>
-								<li>For incorporating texts from and about nineteenth-century Africa through a variety of thematic and critical contexts, including units on: 
-									<ol>
-										<li>Life writing;</li>
-										<li>Colonial environments;</li>
-										<li>Sex and sexuality;</li>
-										<li>Ethiopianism;</li>
-										<li>Resistance;</li>
-										<li>Poetic representation and reinvention;</li>
-										<li>Afterlives of slavery.</li>
-									</ol>
-								</li>
-							</ul>
-						</li>
-						<li><span>Video podcast episodes</span>
-							<ul>
-								<li>On using visual materials, periodicals and book history to “undiscipline” Victorian literature in classroom settings;</li>
-								<li>On incorporating new antiracist frameworks – theoretical, textual, generic, historical, multiracial – in the classroom.</li>
-							</ul>
-						</li>
-					</ul>
-				</section>
-
-				<hr class="section-divider"/>  -->
+				</div> -->
 				
 				<section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
