--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -31,22 +31,24 @@
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
 		<style>
 			.cluster header{
-				border: 1px solid gray;
+				background: linear-gradient(180deg, #fff, 5%, #1157AC, 90%, #fff);
+				/* background: linear-gradient(#fff, 5%, #1C4C87, 90%, #fff); */
 				height: 100px;
-				max-width: 900px;
 				display: flex !important;
 				align-items: center;
 				justify-content: center;
 			}
-			@media only screen and (min-width: 992px){
+			/* @media only screen and (min-width: 992px){
 				.cluster header{
 					width: 75% !important;
 				}
+			} */
+			.cluster header h2{
+				font-size: 2em;
+				/* font-family: 'Source Sans Pro', sans-serif; */
+				color: white;
 			}
-			.cluster header h3{
-				/* color: white; */
-			}
-			.cluster h4{
+			.cluster h3{
 				text-align: left;
 			}
 			.cluster ol{
@@ -138,13 +140,13 @@
 			</nav>
 
 			<header id="header">
-				<h3>Zoomcasts</h3>
+				<h2>Zoomcasts</h2>
 			</header>
 
 			<main id="main">
 
 				<section aria-labelledby="toc">
-					<h4 id="toc">Menu</h4>
+					<h3 id="toc">Menu</h3>
 					<ol>
 						<li><a href="#overview">Overview</a></li>
 						<li><a href="#positionality">Positionality</a></li>
@@ -155,14 +157,14 @@
 				<hr/>
 
 				<section aria-labelledby="overview">
-					<h4 id="overview">Overview</h4>
+					<h3 id="overview">Overview</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur convallis odio ac nisi euismod sodales. Cras malesuada magna a leo aliquet venenatis. Nulla in mi et elit vehicula fermentum eget at ligula. Integer metus nisi, dictum vulputate urna nec, pharetra finibus metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur condimentum sem sed augue vestibulum mattis. Ut vehicula, purus vitae rutrum maximus, libero nibh consectetur odio, ac volutpat libero ipsum ut sem. Phasellus blandit, quam ac efficitur elementum, enim mauris accumsan mi, at maximus erat elit in ante.</p>
 				</section>
 
 				<hr/>
 
 				<section aria-labelledby="positionality">
-					<h4 id="positionality">Positionality</h4>
+					<h3 id="positionality">Positionality</h3>
 					<p><strong>Convenor:</strong> Pearl Chaozon Bauer</p>
 					<p><strong>Overview:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet odio non ligula suscipit elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum porttitor metus, quis sollicitudin ligula blandit ut. Curabitur tempor mi et urna aliquam, vitae sollicitudin eros tristique.</p>
 					<p><strong>Speakers</strong>
@@ -177,7 +179,7 @@
 				<hr/>
 
 				<section aria-labelledby="literary">
-					<h4 id="literary">Beyond the Literary</h4>
+					<h3 id="literary">Beyond the Literary</h3>
 					<p><strong>Convenor:</strong> Ryan Fong</p>
 					<p><strong>Overview:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet odio non ligula suscipit elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum porttitor metus, quis sollicitudin ligula blandit ut. Curabitur tempor mi et urna aliquam, vitae sollicitudin eros tristique.</p>
 					<p><strong>Speakers</strong>
