--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -30,10 +30,21 @@
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
 		<style>
+			/* Black: #191716;
+			Black: rgba(0, 0, 0, 1);
+			Black-Gray: rgba(0, 0, 0, 0.65);
+			Dark Blue: #1C4C87;
+			Light Blue: #1157AC;
+			Gray: #E3E3E3;
+			Darker Gray: #8c8c8c; */
 			.cluster header{
-				background: linear-gradient(180deg, #fff, 5%, #1157AC, 90%, #fff);
-				/* background: linear-gradient(#fff, 5%, #1C4C87, 90%, #fff); */
-				height: 100px;
+				/* background: linear-gradient(180deg, #fff, 5%, #1157AC, 90%, #fff); */
+				background: linear-gradient(#fff, 5%, #1C4C87, 90%, #fff);
+				/* background: linear-gradient(#A64444, #D95436, #D9B29C, #F2D16D, #A0A672); */
+				/* background: linear-gradient(#73534C, #D96248, #BF6A4B, #BFA380, #D9C091); */
+				/* background: linear-gradient(#A64833, #F2C094, #D98841, #D93B58, #D9303E); */
+				/* background: linear-gradient(#1C4C87, #fff, #D9303E); */
+				height: 120px;
 				display: flex !important;
 				align-items: center;
 				justify-content: center;
@@ -44,9 +55,10 @@
 				}
 			} */
 			.cluster header h2{
-				font-size: 2em;
+				font-size: 4em;
 				/* font-family: 'Source Sans Pro', sans-serif; */
 				color: white;
+				/* color: #191716; */
 			}
 			.cluster h3{
 				text-align: left;
