--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
 			</main>
 			
 			<footer id="footer">
-				<hr />
-				<p>&#169; 2020-2021, <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> | Host: <a href="https://github.com/undiscipliningvc">GitHub</a> | CDN: <a href="https://www.cloudflare.com/">Cloudflare</a> | Design &amp; admin: <a href="mailto:awisnicki@yahoo.com">Adrian S. Wisnicki</a> | Contact: <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
+				<p>&#169; 2020-2021, <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> &nbsp;|&nbsp; Host: <a href="https://github.com/undiscipliningvc">GitHub</a> &nbsp;|&nbsp; CDN: <a href="https://www.cloudflare.com/">Cloudflare</a> &nbsp;|&nbsp; Design &amp; admin: <a href="mailto:awisnicki@yahoo.com">Adrian S. Wisnicki</a> &nbsp;|&nbsp; Contact: <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></p>
 			</footer>
 
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
