--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -38,13 +38,6 @@
 			Gray: #E3E3E3;
 			Darker Gray: #8c8c8c; */
 			.cluster header{
-				/* background: linear-gradient(180deg, #fff, 5%, #1157AC, 90%, #fff); */
-				/* background: linear-gradient(#fff, 5%, #1C4C87, 90%, #fff); */
-				/* background: linear-gradient(#A64444, #D95436, #D9B29C, #F2D16D, #A0A672); */
-				/* background: linear-gradient(#73534C, #D96248, #BF6A4B, #BFA380, #D9C091); */
-				/* background: linear-gradient(#A64833, #F2C094, #D98841, #D93B58, #D9303E); */
-				/* background: linear-gradient(#1C4C87, #fff, #D9303E); */
-				/* background: #A64833; */
 				height: 46px;
 				display: flex !important;
 				align-items: center;
@@ -68,26 +61,11 @@
 			.cluster header h2{
 				font-size: 1.1em;
 				font-family: 'Source Sans Pro', sans-serif;
-				/* color: white; */
 				color: #191716;
 				font-weight: 700;
-				padding: 0 1em;
 				border-top: 1px solid #191716;
 				border-bottom: 1px solid #191716;
-			}
-			/* .cluster header:before,
-			.cluster header:after{
-				content: ""; 
-        width: 100%; 
-        height: 50px; 
-        background: linear-gradient(90deg, white 65%, transparent 65%);
-        background-size: 100px; 
-			} */
-			.cluster header h2 i{
-				/* font-size: .9em; */
-				/* padding: .4em .3em .3em .5em;
-				border: 2px solid white;
-				border-radius: 50%; */
+				padding: 0 1em;
 			}
 			.cluster h3{
 				font-size: 1.2em;
@@ -95,21 +73,15 @@
 				color: #fff;
 				background: #5c7d62;
 				border-bottom: 1px solid #322d29;
-				/* background-color: #a5473d; */
 				margin-top: 0;
 				padding: .5em 0;
 			}
 			.cluster h3#toc{
 				text-align: center;
 			}
-			.cluster ul{
-				padding: 0;
-				list-style: none;
-				text-align: center;
-			}
 			.cluster main{
-				max-width: 100%;
 				padding: 0 .5em;
+				max-width: 100%;
 			}
 			.cluster main{
 				margin: 41px auto 0;
@@ -133,30 +105,13 @@
 				border: 1px solid #322d29;
 				border-radius: 5px;
 				margin: 1em 0;
-				/* width: 100%; */
-				/* max-width: 100%; */
 				display: inline-block;
 				/* vertical-align: top; */
 			}
-			/* .cluster section:first-child{
-				margin: .75em 0 1em;
-			} */
 			.cluster section p{
 				padding: 0 1em;
 			}
-			/* .cluster footer{
-				color: #fff;
-				background: #5c7d62;
-			}
-			.cluster footer a,
-			.cluster footer a:visited{
-				color: #fff;
-			}
-			.cluster footer a:hover,
-			.cluster footer a:focus{
-				background-color: #1C4C87;
-			} */
-			[id]:target{
+			/* [id]:target{
 				margin-top: -41px;
 				border-top: 41px solid transparent;
 				-webkit-background-clip: padding-box;
@@ -186,7 +141,7 @@
 					margin-top: -75px;
 					border-top: 75px solid transparent;
 				}
-			}
+			} */
 		</style>
 	</head>
 
