update zoom casts

--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -46,17 +46,17 @@
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span id="home">Home</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i> <span id="home">Home</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span id="zoomcasts">Zoomcasts</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><i class="fa fa-play-circle fa-fw" aria-hidden="true"></i> <span id="zoomcasts">Zoomcasts</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span id="lesson_plans">Lesson Plans</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="syllabi.html"><span id="syllabi">Syllabi</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span id="syllabi">Syllabi</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><span id="faq">FAQ</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i> <span id="faq">FAQ</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><span id="about">About</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span id="about">About</span></a></li>
 
 					<li role="none"><button style="cursor:pointer" title="Menu" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button><button style="cursor:pointer" title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="site_sections.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
@@ -67,17 +67,17 @@
 						<ul>
 							<li role="none"><button class="close" style="cursor:pointer" title="Close" aria-label="Close site sections" onclick="closeSlideMenu()" tabindex="0" id="overlay-first"><i class="fa fa-times"></i></button></li>
 
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><span><i class="fa fa-home"></i> Home</span></a></li>
-
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><span>Zoomcasts</span></a></li>
-
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="lesson_plans.html"><span>Lesson Plans</span></a></li>
-
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="syllabi.html"><span>Syllabi</span></a></li>
-
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><span>FAQ</span></a></li>
-
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html" id="overlay-last"><span>About</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="index.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i> <span>Home</span></a></li>
+		
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="zoomcasts.html"><i class="fa fa-play-circle fa-fw" aria-hidden="true"></i> <span>Zoomcasts</span></a></li>
+		
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span>Lesson Plans</span></a></li>
+		
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span>Syllabi</span></a></li>
+		
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="faq.html"><i class="fa fa-question-circle fa-fw" aria-hidden="true"></i> <span>FAQ</span></a></li>
+		
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span>About</span></a></li>
 						</ul>
 				</div>
 			</nav>
