--- a/zoomcasts.html
+++ b/zoomcasts.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Zoomcasts | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="" />
+		<meta name="description" content="Introduces and organizes in clusters a series of Zoomcasts focused on teaching Victorian Studies through a positive, race-conscious lens." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#1C4C87"/>
